# django-cjswidget

./: MANIFEST.in  README.md  pyproject.toml  setup.py
cjswidget/: __init__.py  apps.py  widgets.py
cjswidget/templates/cjswidget/: widget.html
